k8s-external-deploy/istio/1 install/prometheus-externalname.yaml
# 比如访问某个想通过这个service访问其他namespace中的服务, http的访问用ExternalName并不适合
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus
  namespace: istio-system
spec:
  type: ExternalName
  externalName: prometheus-k8s.monitoring.svc.cluster.local
