k8s-external-deploy/istio/1 install/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prods-gateway
  namespace: myistio
spec:
  selector:
    istio: ingressgateway # istio-ingressgateway的service的标签
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prods.fyxemmmm.cn
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodinfo
  namespace: myistio
spec:
  hosts:
    - prods.fyxemmmm.cn
  gateways:
    - prods-gateway
  http:
  - match:
    - uri:
       prefix: /
    route:
    - destination:
        host: prodsvc
        port:
          number: 80
